finishing touches - IC US 1-3 complete

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,15 +1,15 @@
 <h1><center><%= @doctor.name %></center></h1>
 Doctor Information: 
-<p>Hosptial: <%= @doctor.hospital.name%></p>
 <p>Specialty: <%= @doctor.specialty %></p>
-<p>University: <%= @doctor.university %></p>
-<br>
+<p>Doctorate University: <%= @doctor.university %></p>
+<p>Hosptial: <%= @doctor.hospital.name%></p>
+<hr>
 Doctor's Patients:
 <ul>
 <p><% @doctor.patients.each do |patient| %></p>
   <div id="patients-<%= patient.id %>">
-    <ol><%= patient.name %></ol>
-   # <p><%= link_to "Remove Patient",doctor_patient_path(@doctor, patient), method: :delete %>
+    <ol><%= patient.name %> &nbsp
+    <%= link_to "Remove Patient",doctor_patient_path(@doctor, patient), method: :delete %></ol>
   </div>
 <% end%>
 </ul>
