--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
 <p><% @adult_patients.each do |patient| %></p>
 
-    <ol> <%= patient %> </ol>
+    <ol>Patient Name: <%= patient %> </ol>
 
   <% end %>
 </ul>
